[package]
name = "rds_lock"
version = "1.0.0"
edition = "2024"
authors = ["Steve Zhang <stevzhang01@gmail.com>"]
license = "MIT"
description = "This library is an asynchronous Redis distributed read-write lock"
repository = "https://github.com/imstevez/rds_lock"
keywords = ["distributed-lock", "redis-lock", "read-write-lock", "async"]
categories = ["concurrency", "caching", "data-structures"]
readme = "./README.md"
documentation = "https://docs.rs/rds_lock"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4.26"
simple_logger = "5.0"
derive_more = { version = "2.0.1", features = ["full"] }
redis = { version = "0.29.2", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.16.0", features = ["v4"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
anyhow = "1.0.97"
futures = "0.3.31"
