[package]
name = "rds_lock"
version = "1.0.4"
edition = "2024"
authors = ["Steve Zhang <stevzhang01@gmail.com>"]
license = "MIT"
description = "A simple and easy-to-use asynchronous redis distributed read-write lock implementation based on tokio and redis-rs."
repository = "https://github.com/imstevez/rds_lock"
keywords = ["distributed-lock", "redis-lock", "read-write-lock", "async"]
categories = ["concurrency", "caching", "data-structures"]
readme = "./README.md"
documentation = "https://docs.rs/rds_lock"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.29.5", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.16.0", features = ["v4"] }
anyhow = "1.0.97"